fixing animation issue on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -6,6 +6,7 @@ body, html {
 
 html {
   overflow-x: hidden;
+  position: fixed;
 }
 
 /* navbar */
